2006-06-25  Roger Leigh  <rleigh@debian.org>

	* Update API reference, fixing a few undocumented members and
	updating the doxygen config file.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Close #373943.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc, dchroot/dchroot.cc,
	dchroot-dsa/dchroot-dsa.cc: On an options parsing error, recommend
	the user use --help.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* All headers using tr1::shared_ptr or tr1::tuple include
	sbuild-tr1types.h.

	* sbuild/sbuild-tr1types.h: New header.  Include tr1 or boost
	shared_ptr and tuple headers into the tr1 namespace.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-session.cc
	(wait_for_child): pid is a pid_t, not int.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-releaselock.cc (print_version): Use gmdate.

	* schroot/schroot-listmounts.cc (print_version): Use gmdate.

	* dchroot/dchroot-main-base.cc
	(action_config): Add current date to header comment.  Print help
	comments only if using dchroot.conf.

	* schroot/schroot-main.cc
	(action_version): Use gmdate.
	(action_config): Add current date to header comment.

	* sbuild/sbuild-types.h (sbuild): Split date into gmdate and date
	clases for UTC and local dates respectively, with a date_base
	class to handle common formatting.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* Remove redundant includes from all headers.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* THANKS: Add adeodato, aeb, tbm and vorlon.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* README: Document non-standard configure options.

2006-06-25  Roger Leigh  <rleigh@debian.org>

	* sbuild/sbuild-chroot-lvm-snapshot.cc
	(get_keyfile): Don't save the "lvm-snapshot-device" attribute
	unless the chroot is active.

	* sbuild/sbuild-chroot-file.cc
	(get_keyfile): Don't save the "file-repack" attribute unless the
	chroot is active.

2006-06-25  Roger Leigh  <rleigh@debian.org>
